# ImageProcessor

./: CMakeLists.txt  README.md  tester.json
src/: main.cpp
src/app/: Application.cpp  Application.h  CommandLineParser.cpp  CommandLineParser.h  Config.h  FilterFactory.cpp  FilterFactory.h  HelpPrinter.cpp  HelpPrinter.h
src/common/: Constants.h  Exceptions.h  MathUtils.h
src/core/: Color.h  Image.cpp  Image.h
src/filters/: ArtisticLensFilter.cpp  ArtisticLensFilter.h  CropFilter.cpp  CropFilter.h  EdgeDetectionFilter.cpp  EdgeDetectionFilter.h  Filter.h  GaussianBlurFilter.cpp  GaussianBlurFilter.h  GrayscaleFilter.cpp  GrayscaleFilter.h  MatrixFilter.cpp  MatrixFilter.h  NegativeFilter.cpp  NegativeFilter.h  PointwiseFilter.cpp  PointwiseFilter.h  SharpeningFilter.cpp  SharpeningFilter.h
src/io/: BmpHeaders.h  BmpIO.cpp  BmpIO.h
tests/: test_image_processor.cpp
